[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniredis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "redis>=7.4.0",
]

[tool.pytest.ini_options]
# "auto" => any `async def test_*` runs as an asyncio test without needing an
# explicit @pytest.mark.asyncio marker on every coroutine test.
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
